Bug 1614657 - Update the device list unconditionally on every gUM request. r=jib

In `MediaManager::DeviceListChanged()` we check if a device is removed in order to stop it. That eventually will send the end track event. For doing that correctly the `mDeviceIDs` must be up to date. The `mDeviceIDs` is set as a part of gUM execution in `MediaManager::EnumerateDevicesImpl` inside an if-check. However, having the if-check is not necessary anymore. First, because the device ids do not contain anymore the "default:" prefix and second because there is no real reason to differentiate real from fake devices. In addition to that the if check had an error and did not update the `mDeviceIDs` correctly on video-only or audio-only gUM requests.

Depends on D63100

Differential Revision: https://phabricator.services.mozilla.com/D63204